第5章主体修改完成，需完成校对

--- a/report/05-aqi-gamm.Rmd
+++ b/report/05-aqi-gamm.Rmd
@@ -28,7 +28,7 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 
 
-# 基于半参数混合模型的城市空气质量影响因素分析 {#sec:chap-5}
+# 基于半参数混合模型的空气质量指数影响因素分析 {#sec:chap-5}
 
 第 \@ref(sec:chap-4) 章我们对35城市空气质量的基本状况及其影响因素的基本状况进行
 了概述，并分析了35城市空气质量指数的时间和空间分布特征。从分析结果可以发现，影响
@@ -934,7 +934,7 @@ knitr::kable(gamm.smooth.tab.y, row.names =T, align = c("c", "c", "c", "c"),
 加而增加，在15℃之后，年均AQI随平均气温的增加而下降，这与半参数回归模型中的结果
 不一致。
 
-#### 年均AQI模型比较与选择
+#### 年均AQI模型比较与最优模型选择
 
 上述分析中，我们选取年均AQI作为因变量，基于Lasso筛选出的变量为自变量，分别建立线
 性回归模型、线性混合效应模型、半参数回归模型和半参数混合效应模型对空气质量指数的
@@ -1094,25 +1094,16 @@ knitr::kable(moran.g.gam.best, row.names =T, align = c("r", "r", "r", "r"),
 
 ```
 
-### 月均AQI模型建立与最优模型确定
+### 月均AQI模型建立与最优模型选择
 
-根据因变量分布的分析，月均AQI取对数后近似服从正态分布。因此，下面以对数月均AQI为
-因变量采用月度数据建立线性回归模型、线性混合效应模型、半参数回归模型和半参数混合
-效应模型，从这些模型中选择最优模型并做相应分析。
+根据因变量分布的分析结果，月均AQI取对数后近似服从正态分布。因此，下面以对数月均
+AQI为因变量采用月度数据建立线性回归模型、线性混合效应模型、半参数回归模型和半参
+数混合效应模型，从这些模型中选择最优模型并做相应分析。
 
 #### 月均AQI线性回归模型
 
 作为比较基准，我们首先仍然以对数月均AQI为因变量，筛选出的变量为自变量建立线性回归
-模型，模型结果如表 \@ref(tab:tab-lm-m) 所示。由表 \@ref(tab:tab-lm-m) 可知，在10%
-的显著性水平下，房屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、平均气温、
-降水量、平均风速、平均气压、供暖、临海、纬度均通过显著性检验，其系数分别为0.0000、
-0.0003、0.1798、-0.0093、-0.0006、-0.1016、0.0012、0.0938、-0.1623、0.0111，表明
-私人汽车拥有量、废气治理完成投资额、平均气压、供暖、纬度对对数月均AQI呈正向影响，
-而平均气温、降水量、平均风速与对数月均AQI呈负向影响。说明在其他条件不变的情况下，
-私人汽车拥有量越多，空气质量越差；废气治理完成投资额越多，空气质量越差；平均气压
-越高，空气质量越差；纬度越高的地方空气质量越差。而在其他条件不变的情况下，平均气
-温越高的地方空气质量越好，降水量越多的地方空气质量越好，平均风速越大的地方空气质
-量越好。且平均来讲，供暖地区比不供暖地区空气质量差，临海地区比不临海地区空气质量好。
+模型，模型结果如表 \@ref(tab:tab-lm-m) 所示。
 
 ```{r tab-lm-m, eval=T, results='markup'}
 rm(list=ls())
@@ -1159,22 +1150,21 @@ knitr::kable(lm.m.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 ```
 
-
+由表 \@ref(tab:tab-lm-m) 可知，在10%的显著性水平下，房屋建筑施工面积、私人汽车拥
+有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、供暖、临海、纬度
+均通过显著性检验，其系数分别为0.0000、0.0003、0.1798、-0.0093、-0.0006、-0.1016、
+0.0012、0.0938、-0.1623、0.0111，表明私人汽车拥有量、废气治理完成投资额、平均气
+压、供暖、纬度对对数月均AQI呈正向影响，而平均气温、降水量、平均风速与对数月均AQI
+呈负向影响。说明在其他条件不变的情况下，私人汽车拥有量越多，空气质量越差；废气治
+理完成投资额越多，空气质量越差；平均气压越高，空气质量越差；纬度越高的地方空气质
+量越差。而在其他条件不变的情况下，平均气温越高的地方空气质量越好，降水量越多的地
+方空气质量越好，平均风速越大的地方空气质量越好。且平均来讲，供暖地区比不供暖地区
+空气质量差，临海地区比不临海地区空气质量好。
 
 #### 月均AQI线性混合效应模型
-之后将城市作为随机效应建立线性混合模型，用月度数据对空气质量影响因素进行相应分析。
-拟合结果如表 \@ref(tab:tab-lme-m) 所示。由表 \@ref(tab:tab-lme-m) 可以看出，在10%
-的显著性水平下，房屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、平均气温、
-降水量、平均风速、平均气压、日照时数、是否临海、纬度通过显著性检验，且其系数分别为
-0.0000、-0.0006、0.0367、-0.0122、-0.0005、-0.0621、0.0015、0.0003、-0.1674、0.0129。
-表明废气治理完成投资额、平均气压、日照时数、纬度均对对数月均AQI呈正向影响，私人汽车
-拥有量、平均气温、降水量、平均风速、临海对对数月均AQI呈负向影响。说明在其他变量保持
-不变的条件下，废气治理完成投资额越多，月均AQI越大，空气质量越差；平均气压越大，空气
-质量越差；日照时数越长，空气质量越差；纬度越高的地方空气质量越差；而私人汽车拥有量
-越多，空气质量越好；平均气温越高，空气质量越好；降水量越多，空气质量越好；平均风速
-越大，空气质量越好；且平均来讲，临海地区比不临海地区空气质量好。我们认为，私人汽车
-拥有量越多，空气质量越差。而此时，私人汽车拥有量与我们所预期的符号不一致。
 
+之后将城市作为随机效应建立线性混合模型，用月度数据对空气质量影响因素进行相应分析。
+模型估计结果如表 \@ref(tab:tab-lme-m) 所示。
 
 ```{r tab-lme-m, eval=T, results='markup'}
 rm(list=ls())
@@ -1225,21 +1215,24 @@ knitr::kable(lme.m.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 ```
 
+由表 \@ref(tab:tab-lme-m) 可以看出，在10%的显著性水平下，房屋建筑施工面积、私人
+汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、日照时数、
+是否临海、纬度通过显著性检验，且其系数分别为0.0000、-0.0006、
+0.0367、-0.0122、-0.0005、-0.0621、0.0015、0.0003、-0.1674、0.0129。表明废气治理
+完成投资额、平均气压、日照时数、纬度均对对数月均AQI呈正向影响，私人汽车拥有量、
+平均气温、降水量、平均风速、临海对对数月均AQI呈负向影响。说明在其他变量保持不变
+的条件下，废气治理完成投资额越多，月均AQI越大，空气质量越差；平均气压越大，空气
+质量越差；日照时数越长，空气质量越差；纬度越高的地方空气质量越差；而私人汽车拥有
+量越多，空气质量越好；平均气温越高，空气质量越好；降水量越多，空气质量越好；平均
+风速越大，空气质量越好；且平均来讲，临海地区比不临海地区空气质量好。我们认为，私
+人汽车拥有量越多，空气质量越差。而此时，私人汽车拥有量与我们所预期的符号不一致。
 
 #### 月均AQI半参数回归模型
 
 由之前变量筛选的结果可知，纬度与对数月均AQI之间存在非线性相关关系。进一步建立半
-参数回归模型，结果如表 \@ref(tab:tab-gam-m) 所示。由表 \@ref(tab:tab-gam-m) 可知，
-在10%的显著性水平下，房屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、平均
-气温、降水量、平均风速、平均气压、是否供暖、是否临海对年均AQI存在显著影响，其系
-数分别为0.0000、0.0003、0.0979、-0.0108、-0.0005、-0.0772、0.0014、0.0590、-0.1643。
-表明在其他变量保持不变的条件下，私人汽车拥有量越多，空气质量越差；废气污染治理
-完成投资额越多，空气质量越差；平均气压越大，空气质量越差；而平均气温越高，空气
-质量越好；降水量越多，空气质量越好；平均风速越大，空气质量越好；且平均来讲，供暖
-地区比不供暖地区的空气质量差，而临海地区比不临海地区的空气质量好。且图 \@ref(fig:fig-gam-m) 
-中显示了纬度的拟合曲线，阴影部分表示95%的置信带。由图 \@ref(fig:fig-gam-m) 可以
-看出，纬度在37之前，对数月均AQI随纬度的增加而增加，在37之后，对数月均AQI随纬度的
-增加而下降。且由表 \@ref(tab:tab-gam-m-smooth) 可知，该非参数项通过显著性检验。
+参数回归模型，模型参数部分估计结果如表 \@ref(tab:tab-gam-m) 所示，非参数项光滑曲
+线在图 \@ref(fig:fig-gam-m) 中，非参数项的显著性检验由表
+\@ref(tab:tab-gam-m-smooth) 给出。
 
 ```{r tab-gam-m, eval=T, results='markup'}
 rm(list=ls())
@@ -1288,9 +1281,22 @@ knitr::kable(gam.m.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 ```
 
-```{r fig-gam-m, eval=T, fig.height=2.5, fig.width=6.5,out.width="1.0\\textwidth", fig.pos="H", fig.cap = "月均AQI半参数回归模型非参数曲线", dev=c("cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
+由表 \@ref(tab:tab-gam-m) 可知，在10%的显著性水平下，房屋建筑施工面积、私人汽车
+拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、是否供暖、是否
+临海对年均AQI存在显著影响，其系数分别为0.0000、0.0003、
+0.0979、-0.0108、-0.0005、-0.0772、0.0014、0.0590、-0.1643。表明在其他变量保持不
+变的条件下，私人汽车拥有量越多，空气质量越差；废气污染治理完成投资额越多，空气质
+量越差；平均气压越大，空气质量越差；而平均气温越高，空气质量越好；降水量越多，空
+气质量越好；平均风速越大，空气质量越好；平均来讲，供暖地区比不供暖地区的空气质量
+差，而临海地区比不临海地区的空气质量好。且图 \@ref(fig:fig-gam-m) 中显示了纬度的
+拟合曲线，阴影部分表示95%的置信带。由图 \@ref(fig:fig-gam-m) 可以看出，纬度在37
+之前，对数月均AQI随纬度的增加而增加，在北纬37度之后，对数月均AQI随纬度的增加而下
+降。且由表 \@ref(tab:tab-gam-m-smooth) 可知，该非参数项通过显著性检验。
+
+```{r fig-gam-m, eval=T, fig.height=3.5, fig.width=5,out.width="0.75\\textwidth", fig.align='center', fig.pos="H", fig.cap = "月均AQI半参数回归模型非参数曲线", dev=c("cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
 par(mfrow = c(1,1))
 par(mar=c(5,4,2,1))
+par(cex.axis = 0.9, cex.lab = 0.9)
 plot.gam(gam.m,
          select=1,
          col="blue",
@@ -1298,7 +1304,6 @@ plot.gam(gam.m,
          shade.col="grey",
          ylab="log(AQI)",xlab = "纬度"
          )
-
 ```
 
 ```{r tab-gam-m-smooth, eval=T, results='markup'}
@@ -1316,23 +1321,15 @@ knitr::kable(gam.smooth.tab.m, row.names =T, align = c("c", "c", "c", "c"),
                   repeat_header_text = "(续)")%>%
     kable_styling(full_width = T) %>%
     column_spec(1, width = c("4.5cm"))
-
 ```
 
 #### 月均AQI半参数混合效应模型
 
-进一步建立半参数混合效应模型，同样以城市作为随机效应，其拟合结果如表 \@ref(tab:tab-gamm-m) 
-所示。由表 \@ref(tab:tab-gamm-m) 可知，在10%的显著性水平下，房屋建筑施工面积、私人
-汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、日照时数、是否
-供暖、是否临海均通过显著性检验，且其系数分别为0.0000、-0.0005、0.0385、-0.0120、
--0.0005、-0.0604、0.0017、0.0003、0.0352、-0.1567。表明在其他条件不变的前提下，废气
-治理完成投资额越多，空气质量越差；平均气压越大，空气质量越差；日照时数越长，空气质量
-越差；而私人汽车拥有量越多，空气质量越好；平均气温越高，空气质量越好；降水量越多，
-空气质量越好；平均风速越大，空气质量越好；平均来讲，供暖地区比不供暖地区的空气质量差，
-临海地区比不临海地区空气质量好。同样，私人汽车拥有量的符号与我们预期的符号相反。图 \@ref(fig:fig-gamm-m) 
-显示了半参数混合效应模型的非参数曲线，其非参数项为纬度，该图表明纬度在37之前，对数
-月均AQI随纬度的增加而增加，纬度在37之后，对数月均AQI随纬度的增加而减小。且由表 \@ref(tab:tab-gamm-m-smooth) 
-可知，在10%的显著性水平下，该非参数项通过显著性检验。
+以城市作为随机效应进一步建立半参数混合效应模型，模型参数部分估计结果如表
+\@ref(tab:tab-gamm-m) 所示，非参数项光滑曲线在图 \@ref(fig:fig-gamm-m) 中，非参
+数项的显著性检验由表\@ref(tab:tab-gamm-m-smooth) 给出。
+
+
 
 ```{r tab-gamm-m, eval=T, results='markup'}
 rm(list=ls())
@@ -1383,9 +1380,12 @@ knitr::kable(gamm.m.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 ```
 
-```{r fig-gamm-m, eval=T, fig.height=4, fig.width=6.5,out.width="1.0\\textwidth", fig.pos="H", fig.cap = "月均AQI可加混合模型非参数曲线", dev=c("cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
+```{r fig-gamm-m, eval=T, fig.height=3.5, fig.width=5,out.width="0.75\\textwidth", fig.align='center', fig.pos="H", fig.cap = "月均AQI半参数混合模型非参数曲线", dev=c("cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
 par(mfrow = c(1,1))
 par(mar=c(5,4,2,1))
+par(cex.axis = 0.9, cex.lab = 0.9)
+
+
 plot.gam(gamm.m$gam,
          select=1,
          col="blue",
@@ -1417,39 +1417,53 @@ knitr::kable(gamm.smooth.tab.m, row.names =T, align = c("c", "c", "c", "c"),
 
 ```
 
+由表 \@ref(tab:tab-gamm-m) 可知，在10%的显著性水平下，房屋建筑施工面积、私人汽车
+拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、日照时数、是否
+供暖、是否临海均通过显著性检验，且其系数分别为0.0000、-0.0005、
+0.0385、-0.0120、-0.0005、-0.0604、0.0017、0.0003、0.0352、-0.1567。表明在其他条
+件不变的前提下，废气治理完成投资额越多，空气质量越差；平均气压越大，空气质量越差；
+日照时数越长，空气质量越差；而私人汽车拥有量越多，空气质量越好；平均气温越高，空
+气质量越好；降水量越多，空气质量越好；平均风速越大，空气质量越好；平均来讲，供暖
+地区比不供暖地区的空气质量差，临海地区比不临海地区空气质量好。同样，私人汽车拥有
+量的符号与我们预期的符号相反。图 \@ref(fig:fig-gamm-m) 显示了半参数混合效应模型
+的非参数曲线，其非参数项为纬度，该图表明纬度在37之前，对数月均AQI随纬度的增加而
+增加，纬度在37之后，对数月均AQI随纬度的增加而减小。且由表
+\@ref(tab:tab-gamm-m-smooth) 可知，在10%的显著性水平下，该非参数项通过显著性检验。
 
-#### 月均AQI模型比较与选择
+#### 月均AQI模型比较与最优模型选择
 
-上述分析中，我们选取对数月均AQI作为因变量，基于Lasso筛选出的变量为自变量，分别
-建立线性回归模型、线性混合效应模型、半参数回归模型和半参数混合效应模型对空气质量
-的影响因素进行分析。根据以上分析结果可知，在线性回归模型中，显著的变量有房屋建筑
-施工面积、私人汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均
-气压、供暖、临海、纬度，模型的AIC、BIC值分别为-188.7762、-188.2311；在线性混合
-效应模型中，显著的变量有房屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、
-平均气温、降水量、平均风速、平均气压、日照时数、是否临海、纬度，AIC、BIC值分别
-为-374.5774、-298.7061；在半参数回归模型中，显著的变量有房屋建筑施工面积、私人
+上述分析中，我们选取对数月均AQI作为因变量，基于Lasso筛选出的变量为自变量，分别建
+立线性回归模型、线性混合效应模型、半参数回归模型和半参数混合效应模型对空气质量的
+影响因素进行分析。根据以上分析结果可知，在线性回归模型中，显著的变量有房屋建筑施
+工面积、私人汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、
+供暖、临海、纬度，模型的AIC、BIC值分别为-188.7762、-188.2311；在线性混合效应模型
+中，显著的变量有房屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、平均气温、
+降水量、平均风速、平均气压、日照时数、是否临海、纬度，AIC、BIC值分别
+为-374.5774、-298.7061；在半参数回归模型中，显著的变量有房屋建筑施工面积、私人汽
+车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、是否供暖、是
+否临海，AIC、BIC值分别为-376.7166、-290.7551；在半参数混合效应模型中，显著的变量
+有房屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风
+速、平均气压、日照时数、是否供暖、是否临海，AIC、BIC值分别为-391.865，-310.5743。
+根据以上结果，从AIC、BIC值可以看出半参数混合效应模型最好。但在半参数混合模型中，
+重要影响因素是否供暖未通过显著性检验，且私人汽车拥有量的估计系数未负，即私人汽车
+拥有量约高，月均AQI越小，这与实际不符。这些问题在半参数回归模型中不存在，因此我
+们选择AIC，BIC次优的半参数回归模型作为最优模型。
+
+在半参数回归模型中，日照时数未通过显著性检验，因此再次以对数月均AQI为因变量，房
+屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、
+平均气压、是否供暖、是否临海、纬度为自变量，建立半参数回归模型，模型参数部分估计
+结果如表 \@ref(tab:tab-gam-m-best) 所示，非参数项光滑曲线在图
+\@ref(fig:fig-gam-m-best) 中，非参数项的显著性检验由表
+\@ref(tab:tab-gam-m-smooth-best) 给出。
+
+由表 \@ref(tab:tab-gam-m-best) 可知，在10%的显著性水平下，房屋建筑施工面积、私人
 汽车拥有量、废气治理完成投资额、平均气温、降水量、平均风速、平均气压、是否供暖、
-是否临海，AIC、BIC值分别为-376.7166、-290.7551；在半参数混合效应模型中，显著的
-变量有房屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、平均气温、降水量、
-平均风速、平均气压、日照时数、是否供暖、是否临海，AIC、BIC值分别为-391.865，
--310.5743。根据以上结果，从AIC、BIC值可以看出半参数混合效应模型最好，但是从模型
-变量来讲，结合之前的分析及我们的预期，这些模型并未真正表明筛选出的变量与对数月均
-AQI之间的关系。
-
-在以上四个模型中，相对来讲，半参数回归模型的结果更加符合实际。因此，进一步选取上述
-所有模型中显著的变量，以对数月均AQI为因变量，房屋建筑施工面积、私人汽车拥有量、废气
-治理完成投资额、平均气温、降水量、平均风速、平均气压、是否供暖、是否临海、纬度为自
-变量，建立半参数回归模型，结果如表 \@ref(tab:tab-gam-m-best) 所示。由表 \@ref(tab:tab-gam-m-best) 
-可知，在10%的显著性水平下，房屋建筑施工面积、私人汽车拥有量、废气治理完成投资额、
-平均气温、降水量、平均风速、平均气压、是否供暖、是否临海均通过显著性检验，且其系数
-分别为0.0000、0.0003、0.0967、-0.0103、-0.0005、-0.0695、00014、0.0619、-0.1636。
-表明在其他条件不变的情况下，私人汽车拥有量越多，空气质量越差；废气治理完成投资额越多，
-空气质量越差；平均气压越高，空气质量越差；而平均气温越高，空气质量越好；降水量越多，
-空气质量越好；平均风速越大，空气质量越好；且平均来讲，供暖地区比不供暖的空气质量差，
-临海地区比不临海地区的空气质量好。图 \@ref(fig:fig-gam-m-best) 表明了纬度的非参数
-曲线，可以看出，纬度在37之前，对数月均AQI随纬度的增加而增加，纬度在37之后，对数月均
-AQI随纬度的增加而减少。且从表 \@ref(tab:tab-gam-m-smooth-best) 中可以看出，在10%的
-显著性水平下，该非参数项通过显著性检验，说明纬度对空气质量有非线性影响。
+是否临海均通过显著性检验，且其系数分别为0.0000、0.0003、
+0.0967、-0.0103、-0.0005、-0.0695、00014、0.0619、-0.1636。表明在其他条件不变的
+情况下，私人汽车拥有量越多，空气质量越差；废气治理完成投资额越多，空气质量越差；
+平均气压越高，空气质量越差；而平均气温越高，空气质量越好；降水量越多，空气质量越
+好；平均风速越大，空气质量越好；且平均来讲，供暖地区比不供暖的空气质量差，临海地
+区比不临海地区的空气质量好。
 
 ```{r tab-gam-m-best, eval=T, results='markup'}
 rm(list=ls())
@@ -1500,9 +1514,11 @@ knitr::kable(gam.m.best.coef, row.names =T, align = c("r", "r", "r", "r"),
 
 ```
 
-```{r fig-gam-m-best, eval=T, fig.height=4, fig.width=6.5,out.width="1.0\\textwidth", fig.pos="H", fig.cap = "月均AQI最优模型非参数曲线", dev=c("cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
+```{r fig-gam-m-best, eval=T, fig.height=3.5, fig.width=5,out.width="0.75\\textwidth", fig.align='center', fig.pos="H", fig.cap = "月均AQI最优模型非参数曲线", dev=c("cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
 par(mfrow = c(1,1))
 par(mar=c(5,4,2,1))
+par(cex.axis = 0.9, cex.lab = 0.9)
+
 plot.gam(gam.m.best,
          select=1,
          col="blue",
@@ -1531,4 +1547,26 @@ knitr::kable(gam.smooth.tab.m, row.names =T, align = c("c", "c", "c", "c"),
 
 ```
 
+图 \@ref(fig:fig-gam-m-best) 表明了纬度的非参数曲线，可以看出，纬度在37之前，对
+数月均AQI随纬度的增加而增加，纬度在37之后，对数月均AQI随纬度的增加而减少。且从表
+\@ref(tab:tab-gam-m-smooth-best) 中可以看出，在10%的显著性水平下，该非参数项通过
+显著性检验，说明纬度对空气质量有非线性影响。
 
+这一章在根据研究需要对因变量进行定义并考察其分布后，分别对年均AQI和月均AQI建立可
+加混合模型框架下的各种模型，并通过模型拟合优度指标及模型实际意义选取了最优模型。
+在建立模型过程中，使用了Lasso方法进行自变量筛选及决定其进入模型的形式。
+
+对于年均AQI，社会经济影响因素有废气治理完成投资额，固定资产投资额和汽车拥有量，
+其中废气治理完成投资额是正的线性影响，固定资产投资和汽车拥有量与年均AQI直接具有
+非线性关系；气候因素中的平均风速和平均气温也对年均AQI有显著性影响，其中平均风速
+是线性关系，平均气温具有非线性关系。是否临海，是否供暖和纬度三个地理因素对年均
+AQI有线性影响。
+
+对于月均AQI，社会经济方面影响因素有废气治理完成投资额，房屋建筑施工面积和汽车拥
+有量，且这三个因素均为线性影响；平均气温，降水量，平均风速和平均气压这四个气象变
+量都对月均AQI有显著性的线性影响；是否临海，是否供暖和纬度三个地理因素对月均AQI有
+影响其中是否临海和是否供暖是线性影响，纬度与月均AQI直接的关系是非线性的。
+
+
+通过比较年均AQI和月均AQI之间的影响因素，我们发现二者并不完成重合。这可能是因为年
+均AQI具有更多的稳定性，而月均AQI更多受当月具体情况的影响。
