--- a/report/05-aqi-gamm.Rmd
+++ b/report/05-aqi-gamm.Rmd
@@ -38,7 +38,7 @@ Sys.setlocale("LC_ALL", "Chinese")
 因变量进行定义，然后对自变量进行筛选，最后建立模型对空气质量指数影响因素进行分析。
 
 ## 因变量定义及自变量筛选方法
-### 因变量定义及其分布
+### 因变量定义及其分布 {#sec:dep-dist}
 在进行实证建模分析之前，我们需要根据分析目标对因变量的内涵及其分布进行考察。空气
 质量指数是反映空气质量好坏的重要指标，以空气质量指数作为因变量进行空气质量影响因
 素的分析也比较合理。但从之前的分析中我们可以发现，空气质量指数的大小和空气质量优
