--- a/report/06-excel-gamm.Rmd
+++ b/report/06-excel-gamm.Rmd
@@ -461,7 +461,7 @@ knitr::kable(gam.smooth.tab.y.excel, row.names =T, align = c("c", "c", "c", "c")
 
 从图 \@ref(fig:fig-excel-gam-y-best) 中可以看出，年均空气质量为优天数随地区生产
 总值呈先下降后上升的趋势，地区生产总值在1000亿元之前，年均空气质量为优的天数随地
-区生产总值的增加而增加，在1000-2000亿元之间，年均空气质量为优的天数随地区生产总
+区生产总值的增加而下降，在1000-2000亿元之间，年均空气质量为优的天数随地区生产总
 值的增加基本保持不变，在2000亿元之后，年均空气质量为优的天数随地区生产总值的增加
 而显著上升。对于纬度来讲，年均空气质量为优的天数随纬度的上升呈增加-减少-增加的变
 动趋势，整体来讲，纬度在25之前，年均空气质量为优的天数随纬度的增加而缓慢增加，纬
@@ -588,7 +588,7 @@ knitr::kable(lm.m.excel.coef, row.names =T, align = c("r", "r", "r", "r"),
 由表 \@ref(tab:tab-excel-lm-m) 可知，在筛选出的变量中，房屋建筑施工面积、废气治
 理完成投资额、平均气温、降水量、平均相对湿度、平均风速、是否供暖、是否临海、纬度
 这些变量在10%的显著性水平下均通过显著性检验，且其系数分别为0.0000、-0.5486、
-0.031、0.0038、0.0309、0.3306、0.1992、0.0826、-0.017，说明平均气温、降水量、平
+0.031、0.0008、0.0309、0.3306、0.1992、0.0826、-0.017，说明平均气温、降水量、平
 均相对湿度、平均风速、供暖、临海对月均空气质量为优天数呈正向影响，而废气治理完成
 投资额和纬度对月均空气质量为优天数呈负向影响。也就是说，在其他变量保持不变的条件
 下，平均气温越高、降水量越多、平均相对湿度越大、平均风速越大、供暖、临海的地区，
@@ -837,7 +837,7 @@ knitr::kable(gamm.smooth.tab.m.excel, row.names =T, align = c("c", "c", "c", "c"
 降水量、平均相对湿度、平均风速、是否供暖、纬度；在泊松可加混合效应模型中，显著的
 变量有房屋建筑施工面积、废气治理完成投资额、平均气温、降水量、平均相对湿度、平均
 风速、是否供暖、纬度。根据以上结果，结合之前的分析及我们的预期，这些模型尚未很好
-地表明变量与年均空气质量为优天数之间的关系。综合考虑模型的拟合优度及模型的实际意
+地表明变量与月均空气质量为优天数之间的关系。综合考虑模型的拟合优度及模型的实际意
 义，泊松可加模型对于月度空气质量为优天数的拟合最好。但在上面建立的泊松可加模型中，
 自变量是否临海不显著，故剔除之重新建立泊松可加混合模型作为最优模型。也即以月均空
 气质量为优天数为因变量，房屋建筑施工面积、废气治理完成投资额、平均气温、降水量、
