--- a/report/07-severe-gamm.Rmd
+++ b/report/07-severe-gamm.Rmd
@@ -32,17 +32,17 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 # 基于广义可加混合模型的空气严重污染影响因素分析 {#sec:chap-7}
 
-上一章我们对城市空气质量的基本状况及其影响因素的基本状况进行了概述，并分析了空气
+第 \@ref(sec:chap-4)我们对城市空气质量的基本状况及其影响因素的基本状况进行了概述，并分析了空气
 质量指数的时空间分布特征。从中可以发现，影响城市空气质量好坏的原因很复杂，并不是
-某一方面决定的，而是各个方面多因素综合作用的结果。因此，本章在上一章的基础上，对
-城市空气质量的影响因素进行分析，探明哪些因素对城市空气质量会产生影响及其具体影响
+某一方面决定的，而是各个方面多因素综合作用的结果。因此，本章在前面章节分析的基础上，对
+城市空气质量的影响因素进行分析，探明哪些因素对空气严重污染天数会产生影响及其具体影响
 方式。
 
 ## 年度数据分析
 
 ### 自变量筛选
 
-以同样的方法对年度空气严重污染天数为因变量进行相应分析，变量筛选结果如图 \@ref(fig:fig-var-sel-m-excel) 
+用同样的方法以年度空气严重污染天数为因变量进行相应分析，变量筛选结果如图 \@ref(fig:fig-var-sel-m-excel) 
 所示。在图 \@ref(fig:fig-var-sel-m-excel) 中，横轴表示各自变量，纵轴表示标准化后的年度空气
 严重污染的天数。由图 \@ref(fig：fig-var-sel-m-excel) 可知，地区生产总值、地区生产总值增长率、
 固定资产投资额、城市公路客运量、房屋建筑施工面积、全社会用电量、工业二氧化硫排放量、工业烟
@@ -78,7 +78,6 @@ mapply(function(i, y) {
     as.list(varinfo[,2][-c(1:3, 23:24)]))
 ```
 
-解释 60.46%
 
 ### 泊松回归模型
 作为比较的基准，首先建立泊松回归模型，结果如表 \@ref(tab:tab-severe-lm-y) 所示。由
@@ -288,8 +287,8 @@ knitr::kable(gam.smooth.tab.y.severe, row.names =T, align = c("c", "c", "c", "c"
 降水量越多，临海区域、纬度越高，年度空气严重污染天数越少，空气质量越好。图 \@ref(fig:fig-severe-gamm-y) 
 显示了泊松可加混合效应模型的非参数曲线，其非参数项为常住人口、建成区绿化覆盖率、平均
 风速、日照时数，且由表 \@ref(tab:tab-severe-gamm-y-smooth) 的非参数项显著性检验可知，
-在10%的显著性水平下，为常住人口、建成区绿化覆盖率、平均风速、日照时数均通过显著性检验，
-表明为常住人口、建成区绿化覆盖率、平均风速、日照时数对年度空气严重污染天数存在非线性
+在10%的显著性水平下，常住人口、建成区绿化覆盖率、平均风速、日照时数均通过显著性检验，
+表明常住人口、建成区绿化覆盖率、平均风速、日照时数对年度空气严重污染天数存在非线性
 影响。且从图 \@ref(fig:fig-severe-gamm-y) 可以看出，年度空气严重污染天数随常住人口的
 增加而增加，随平均风速、日照时数的增加而减少，随建成区绿化覆盖率的增加呈先增加后下降的趋势。
 
@@ -391,7 +390,7 @@ knitr::kable(gamm.smooth.tab.y.severe, row.names =T, align = c("c", "c", "c", "c
 与年度空气严重污染天数之间的关系。
 
 进一步选取上述所有模型中显著的变量，考虑实际情况，以年度空气严重污染天数为因变量，
-降水量、平均风速、是否供暖、是否临海、纬度。常住人口、日照时数为自变量建立泊松可
+降水量、平均风速、是否供暖、是否临海、纬度、常住人口、日照时数为自变量建立泊松可
 加模型，结果如表 \@ref(tab:tab-severe-gam-y-best) 所示。由表 \@ref(tab:tab-severe-gam-y-best) 
 可知，在10%的显著性水平下，降水量、平均风速、是否供暖、是否临海、纬度均通过显著性
 检验，且参数项系数分别为-0.0011、-0.8767、1.3932、-1.2146、0.0794。表明在其他条件
@@ -480,7 +479,7 @@ knitr::kable(gam.smooth.tab.y.severe, row.names =T, align = c("c", "c", "c", "c"
 被剔除，而剩下的变量有常住人口、私人汽车拥有量、平均气温、降水量、平均相对湿度、平均风速、
 日照时数、纬度。且在剩下的这些变量中，可以看出，私人汽车拥有量对月度是否出现严重污染呈
 正向影响，而降水量、平均相对湿度、平均风速、日照时数对月度是否出现严重污染呈负向影响，
-常住人口、平均气温、纬度与月月是否出现严重污染呈非线性相关关系。
+常住人口、平均气温、纬度与月度是否出现严重污染呈非线性相关关系。
 
 ```{r fig-var-sel-m-severe, eval=T, fig.height=8.5, fig.width=6.5,out.width="1.0\\textwidth", fig.pos="H", fig.cap = "月度是否出现严重污染自变量筛选结果", dev=c("cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
 rm(list=ls())
@@ -512,7 +511,6 @@ mapply(function(i, y) {
 
 ```
 
-解释 26.53%
 
 
 ### Logistic回归模型
@@ -766,7 +764,7 @@ knitr::kable(gamm.smooth.tab.m.severe, row.names =T, align = c("c", "c", "c", "c
 上述分析中，我们选取月度是否出现严重污染作为因变量，基于lasso筛选出的变量为自变量，
 分别建立logistic回归模型、logistic混合效应模型、logistic可加模型和logistic可加混合
 效应模型对空气质量的影响因素进行分析。根据以上分析结果可知，在logistic回归模型中，
-显著的变量有常住人口、私人汽车拥有量有平均气温、降水量、平均相对湿度、平均风速、
+显著的变量有常住人口、私人汽车拥有量、平均气温、降水量、平均相对湿度、平均风速、
 日照时数、纬度；在logistic混合效应模型中，显著的变量有私人汽车拥有量、平均气温、
 降水量、平均相对湿度、平均风速、日照时数、纬度；在logistic可加模型中，显著的变量
 有私人汽车拥有量、降水量、平均相对湿度、平均风速、日照时数、常住人口、平均气温、
@@ -777,10 +775,10 @@ knitr::kable(gamm.smooth.tab.m.severe, row.names =T, align = c("c", "c", "c", "c
 进一步选取上述所有模型中显著的变量，考虑实际情况，以月度是否出现严重污染为因变量，
 私人汽车拥有量、降水量、平均相对湿度、平均风速、日照时数、常住人口、平均气温、纬度
 为自变量，建立logistic可加模型，结果如表 \@ref(tab:tab-severe-gam-m-best) 所示。
-由表 \@ref(tab:tab-severe-gam-m-best) 可知，在10%的显著性水平下，私人汽车拥有量、
+由表 \@ref(tab:tab-severe-gam-m-best) 可知，在10%的显著性水平下，
 降水量、平均相对湿度、平均风速、日照时数均通过显著性检验，且其系数均为负，表明在
-其他条件不变的情况下，私人汽车拥有量越多、降水量越大、平均相对湿度越大、平均风速
-越大、日照时数越长，月度出现严重污染的概率越大。图 \@ref(fig:fig-severe-gam-m-best) 
+其他条件不变的情况下，降水量越大、平均相对湿度越大、平均风速
+越大、日照时数越长，月度出现严重污染的概率越小。图 \@ref(fig:fig-severe-gam-m-best) 
 表明了常住人口、平均气温、纬度的非参数曲线，且从表 \@ref(tab:tab-severe-gam-m-smooth-best) 
 中可以看出，在10%的显著性水平下，纬度对月度是否出现严重污染的概率有非线性影响。
 
