第 7 章初步修改

--- a/report/05-aqi-gamm.Rmd
+++ b/report/05-aqi-gamm.Rmd
@@ -1555,7 +1555,7 @@ knitr::kable(gam.smooth.tab.m, row.names =T, align = c("c", "c", "c", "c"),
 在建立模型过程中，使用了Lasso方法进行自变量筛选及决定其进入模型的形式。
 
 对于年均AQI，社会经济影响因素有废气治理完成投资额，固定资产投资额和汽车拥有量，
-其中废气治理完成投资额是正的线性影响，固定资产投资和汽车拥有量与年均AQI直接具有
+其中废气治理完成投资额是正的线性影响，固定资产投资和汽车拥有量与年均AQI之间具有
 非线性关系；气候因素中的平均风速和平均气温也对年均AQI有显著性影响，其中平均风速
 是线性关系，平均气温具有非线性关系。是否临海，是否供暖和纬度三个地理因素对年均
 AQI有线性影响。
