--- a/report/06-excel-gamm.Rmd
+++ b/report/06-excel-gamm.Rmd
@@ -918,3 +918,19 @@ knitr::kable(gam.smooth.tab.m.excel, row.names =T, align = c("c", "c", "c", "c")
 \@ref(fig:fig-excel-gam-m-best) 中进一步可以看出，整体上月均空气质量为优天数随纬
 度呈现下降-上升的趋势，具体来讲，纬度以35为分界线，在35之前，月均空气质量为优天
 数随纬度的增加而下降，35之后月均空气质量为优天数随纬度增加而增加。
+
+这一章从空气质量控制的最终目标：尽量提高空气质量为优的天数的角度，对35城市年度空
+气质量为优天数建立正态可加混合模型框架下的各种模型，对月度空气质量为优天数建立泊
+松可加混合模型框架下的各种模型，并通过模型拟合优度指标及模型实际意义选取了最优模
+型。在建立模型过程中，仍然使用了Lasso方法进行自变量筛选及决定其进入模型的形式。
+
+对于年度空气质量为优天数，社会经济影响因素有GDP，全社会用电量和废气治理完成投资
+额，其中全社会用电量和废气治理完成投资额与年度空气质量为优天数之间具有线性关系，
+GDP具有非线性作用；气候因素中的平均相对湿度和平均风速对年度空气质量为优天数有线
+性影响。地理因素中只有纬度变量对年度空气质量为优天数有显著性影响，并且关系是非线
+性的。对于年度空气质量为优天数，社会经济影响因素有房屋建筑施工面积和废气治理完成
+投资额，并且二者与年度空气质量为优天数之间均具有线性关系；气候因素中的平均气温，
+降水量，平均相对湿度和平均风速对年度空气质量为优天数有线性影响。地理因素中是否供
+暖和纬度变量对年度空气质量为优天数有显著性影响，是否供暖是线性关系，纬度是非线性
+影响。通过比较年度空气质量为优天数和月度空气质量为优天数之间的影响因素，我们发现
+二者并不完成重合。
