--- a/report/07-severe-gamm.Rmd
+++ b/report/07-severe-gamm.Rmd
@@ -32,19 +32,20 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 # 基于广义可加混合模型的空气严重污染影响因素分析 {#sec:chap-7}
 
-第 \@ref(sec:chap-4)我们对城市空气质量的基本状况及其影响因素的基本状况进行了概述，并分析了空气
-质量指数的时空间分布特征。从中可以发现，影响城市空气质量好坏的原因很复杂，并不是
-某一方面决定的，而是各个方面多因素综合作用的结果。因此，本章在前面章节分析的基础上，对
-城市空气质量的影响因素进行分析，探明哪些因素对空气严重污染天数会产生影响及其具体影响
-方式。
+第 \@ref(sec:chap-5) 章我们以年均AQI和月均AQI为因变量，分析了空气质量指数的影响
+因素。第 \@ref(sec:chap-6) 章我们以年度和月度空气质量为优天数为因变量，分析了空
+气质量为优天数的影响因素。空气质量指数是空气质量的综合水平测度，空气质量为优天数
+是空气质量最高标准的度量。本章将从空气质量出现的最坏情况，也即出现空气严重污染的
+角度开展研究，分别以年度城市空气出现严重污染的天数和月度城市是否会出现严重污染为
+因变量建立模型，探讨空气严重污染的影响因素。
 
 ## 年度数据分析
 
 ### 自变量筛选
 
-用同样的方法以年度空气严重污染天数为因变量进行相应分析，变量筛选结果如图 \@ref(fig:fig-var-sel-m-excel) 
-所示。在图 \@ref(fig:fig-var-sel-m-excel) 中，横轴表示各自变量，纵轴表示标准化后的年度空气
-严重污染的天数。由图 \@ref(fig：fig-var-sel-m-excel) 可知，地区生产总值、地区生产总值增长率、
+用同样的方法以年度空气严重污染天数为因变量进行相应分析，变量筛选结果如图 \@ref(fig:fig-var-sel-m-severe) 
+所示。在图 \@ref(fig:fig-var-sel-m-severe) 中，横轴表示各自变量，纵轴表示标准化后的年度空气
+严重污染的天数。由图 \@ref(fig：fig-var-sel-m-severe) 可知，地区生产总值、地区生产总值增长率、
 固定资产投资额、城市公路客运量、房屋建筑施工面积、全社会用电量、工业二氧化硫排放量、工业烟
 粉尘排放量、工业污染治理完成投资额、废气治理完成投资额、平均气温、平均气压、经度、海拔对年
 度空气严重污染的天数无影响，这些变量被剔除，而剩下的变量有常住人口、建成区绿化覆盖率、私人
