--- a/report/03-estimation.Rmd
+++ b/report/03-estimation.Rmd
@@ -15,6 +15,10 @@ link-citations: true
 
 
 ```{r setup, echo=F}
+
+################# 第 3 章 R 程序代码  ####################
+
+
 knitr::opts_knit$set(root.dir = getwd())
 knitr::opts_chunk$set(echo = FALSE, results = 'hide')
 knitr::opts_chunk$set(warning = FALSE, message=FALSE)
