--- a/report/07-severe-gamm.Rmd
+++ b/report/07-severe-gamm.Rmd
@@ -15,6 +15,10 @@ link-citations: true
 
 
 ```{r setup, echo=F}
+
+################# 第 7 章 R 程序代码  ####################
+
+
 knitr::opts_knit$set(root.dir = getwd())
 knitr::opts_chunk$set(echo = FALSE, results = 'hide')
 knitr::opts_chunk$set(warning = FALSE, message=FALSE)
@@ -749,7 +753,7 @@ dimnames(gamm.m.severe.coef) <- list(c("截距项", varselname[-c(1,3,10)]), c("
 
 library("kableExtra")
 knitr::kable(gamm.m.severe.coef, row.names =T, align = c("r", "r", "r", "r"),
-             caption="月度是否出现空气严重污染Logistic可加混合效应模型回归固定效应表",digits = 4,
+             caption="月度是否出现空气严重污染Logistic可加混合模型回归固定效应表",digits = 4,
              longtable = TRUE, booktabs = TRUE, escape = F) %>%
     kable_styling(latex_options = c("striped", "scale_down", "repeat_header", "hold_position"),
                   ## stripe_index = rep(1:5, 4)+rep(c(0,10,20,30), each = 5),
