--- a/report/denotation.tex
+++ b/report/denotation.tex
@@ -8,7 +8,7 @@
 \item [CV] 交叉验证(Cross Validation)
 \item [DPQL] 双重惩罚拟似然(估计)(Double Penalized Quasi Likelihood)
 \item [GAM] 广义可加模型(Generalized Additive Model)
-\item [GAMM] 广义可加混合模型(Generalized Addictive Mixed Model)
+\item [GAMM] 广义可加混合模型(Generalized Additive Mixed Model)
 \item [GLMM] 广义线性混合模型(Generalized Linear Mixed Model)
 \item [GCV] 广义交叉验证(Generalized Cross Validation)
 \item [GDP] 国内生产总值(Gross Domestic Product)
