--- a/report/07-severe-gamm.Rmd
+++ b/report/07-severe-gamm.Rmd
@@ -938,15 +938,15 @@ knitr::kable(gam.smooth.tab.m.severe, row.names =T, align = c("c", "c", "c", "c"
 变量筛选及决定其进入模型的形式。
 
 对于年度空气严重污染天数，社会经济影响因素中的常住人口数是影响天数多少的主要因素，
-并且这个影响是一个非线性的，总体而言，年度空气严重污染天数是随着常住人口数的增加
-而逐渐增多，但常住人口数超过2000万的特大城市，对于空气严重污染控制的比较好，年度
-空气严重污染天数并不多。气候因素中的降水量和平均风速对年度空气严重污染天数有负向
-线性影响，而日照时数有非线性影响。地理因素中的是否供暖，是否临海和纬度均对年度空
-气严重污染天数有显著性线性影响。对于月度是否出现空气严重污染，社会经济影响因素有
-常住人口数和私人汽车拥有量，其中私人汽车拥有量与月度是否出现空气严重污染的概率之
-间具有负向线性关系，常住人口数与月度是否出现空气严重污染概率之间具有非线性关系；
-气候因素中的平均气温，降水量，平均相对湿度，平均风速和日照时数对月度是否出现空气
-严重污染的概率局有显著性影响，其中平均气温是非线性影响，其他4个气候因素是负向线
-性影响。地理因素中只有纬度变量对月度是否出现空气严重污染有显著性影响，并且这个影
-响是非线性的。通过比较年度空气严重污染天数和月度是否出现空气严重污染之间的影响因
-素，我们发现二者并不完成重合。
+并且这个影响是非线性的，总体而言，年度空气严重污染天数是随着常住人口数的增加而逐
+渐增多，但常住人口数超过2000万的特大城市，对于空气严重污染控制的比较好，年度空气
+严重污染天数并不多。气候因素中的降水量和平均风速对年度空气严重污染天数有负向线性
+影响，而日照时数有非线性影响。地理因素中的是否供暖，是否临海和纬度均对年度空气严
+重污染天数有显著性线性影响。对于月度是否出现空气严重污染，社会经济影响因素有常住
+人口数和私人汽车拥有量，其中私人汽车拥有量与月度是否出现空气严重污染的概率之间具
+有负向线性关系，常住人口数与月度是否出现空气严重污染概率之间具有非线性关系；气候
+因素中的平均气温，降水量，平均相对湿度，平均风速和日照时数对月度是否出现空气严重
+污染的概率局有显著性影响，其中平均气温是非线性影响，其他4个气候因素是负向线性影
+响。地理因素中只有纬度变量对月度是否出现空气严重污染有显著性影响，并且这个影响是
+非线性的。通过比较年度空气严重污染天数和月度是否出现空气严重污染之间的影响因素，
+我们发现二者并不完成重合。
