--- a/report/style/bookdown-pdf-template.tex
+++ b/report/style/bookdown-pdf-template.tex
@@ -95,6 +95,10 @@ $if(colorlinks)$
 \hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$black$endif$}
 $endif$
 
+\cleardoublepage
+\frontmatter
+\input{abstract}
+
 \setcounter{tocdepth}{$toc-depth$}
 \cleardoublepage
 \phantomsection %
